--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,11 @@
-<div id="app"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>Art Generator</title>
+      <script src="../dist/index.js" type="text/javascript"></script>
+  </head>
+  <body>
+  </body>
+</html>
