--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <title>Happy New Year Art Generator</title>
+      <title>Happy New Year Procedural Art Generator</title>
       <script src="../dist/index.js" type="text/javascript"></script>
   </head>
   <body>
